Bug 85581 - xf86-video-intel build fails with "sna_accel.c:16625:9: error: 'struct _GC' has no member named 'clientClipType'"
Summary: xf86-video-intel build fails with "sna_accel.c:16625:9: error: 'struct _GC' h...
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-10-29 03:38 UTC by fangxun
Modified: 2014-10-30 07:26 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description fangxun 2014-10-29 03:38:12 UTC
Bisect shows xserver commit 73e2383b caused the build failure.
commit 73e2383b7350723256894c5076d0c731aec5cd1f
Author:     Adam Jackson <ajax@redhat.com>
AuthorDate: Fri Jun 20 13:31:20 2014 -0400 
Commit:     Adam Jackson <ajax@redhat.com>
CommitDate: Mon Oct 27 15:46:05 2014 -0400

    dix: Always store GC client clip as a region (v2)

    Again, this changes FixesCreateRegionFromGC to throw BadMatch when fed a
    GC with no client clip.

    v2: Fix Xnest and some variable names (Keith)

    Reviewed-by: Keith Packard <keithp@keithp.com>
    Signed-off-by: Adam Jackson <ajax@redhat.com>
Comment 1 Adam Jackson 2014-10-29 12:21:23 UTC
So fix sna.
Comment 2 Chris Wilson 2014-10-29 16:57:22 UTC
commit 61436c2fabe117b85404eecb06158ba0a63a7741
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Oct 29 16:52:44 2014 +0000

    sna: Fix build for GC API changes in Xorg-1.16.99.901
    
    The GC struct was changed in
    
    commit 73e2383b7350723256894c5076d0c731aec5cd1f
    Author: Adam Jackson <ajax@redhat.com>
    Date:   Fri Jun 20 13:31:20 2014 -0400
    
        dix: Always store GC client clip as a region (v2)
    
    update to match.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=85581
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 fangxun 2014-10-30 07:26:43 UTC
Verified on commit 61436c2fabe117b85404eecb06158ba0a63a7741.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.